# 3D-RenderingGLSL

./: CMakeLists.txt  FollowCamera.cpp  FollowCamera.h  MovingStructure.cpp  MovingStructure.h  README.md  glm.hpp
mge/: MGEDemo.cpp  MGEDemo.hpp  config.hpp
mge/behaviours/: KeysBehaviour.cpp  KeysBehaviour.hpp  RotatingBehaviour.cpp  RotatingBehaviour.hpp
mge/core/: AbstractGame.cpp  Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  Texture.cpp  World.cpp  World.hpp
mge/materials/: AbstractMaterial.cpp  AbstractMaterial.hpp  ColorMaterial.cpp  ColorMaterial.hpp  LightMaterial.cpp  LightMaterial.hpp  TerrainMaterial.cpp  TerrainMaterial.h  TextureMaterial.cpp  TextureMaterial.hpp
mge/shaders/: color.fs  color.vs  light.fs  light.vs  terrain.fs  terrain.vs  texture.fs  texture.vs
mge/util/: DebugHud.cpp
